# Star-Trek-Red-Alert

./: .gitignore  CMakeLists.txt  README.md
libs/nlohmann/: json.hpp
resource/: Ent-D.psd  humannames.csv
resource/names/: andoriannames.csv  bajorannames.csv  betazoidnames.csv  boliannames.csv  caitiannames.csv  humannames.csv  humanoidnames.csv  humanoidspecies.csv  klingonnames.csv  orionnames.csv  tellaritenames.csv  trillnames.csv
resource/ships-json/: KlingonBirdOfPrey.json  NCC-1701-D.json
resource/ships/FederationEnterpriseD/: federationenterpriseD.json
resource/ships/KlingonBirdOfPrey/: KlingonBirdOfPrey.json
src/: Button.cpp  Button.hpp  Game.cpp  Game.h  Game.hpp  InitializeShip.cpp  InitializeShip.hpp  MainMenu.hpp  Menu.cpp  Menu.hpp  NCC-1701-D.cpp  NCC-1701-D.hpp  Projectile.cpp  Projectile.hpp  Room.cpp  Room.hpp  SeparateAxisTheorem.cpp  SeparateAxisTheorem.hpp  Subsystem.cpp  Subsystem.hpp  System.cpp  System.hpp  engine.cpp  main.cpp  personnel.cpp  personnel.h  personnel.hpp  random0_n.cpp  random0_n.hpp  ship.cpp  ship.h  ship.hpp  systems.hpp
tests/: tests.cpp
